--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,18 @@
 ---
 ---
 
+@article{constantinescu_elkind_2021,
+  title={Proportional Representation under Single-Crossing Preferences Revisited},
+  volume={35},
+  url={https://ojs.aaai.org/index.php/AAAI/article/view/16667},
+  number={6},
+  journal={Proceedings of the AAAI Conference on Artificial Intelligence},
+  author={Constantinescu, Andrei and Elkind, Edith}, year={2021},
+  month={May},
+  pages={5286--5293},
+  abbr={AAAI'21}
+}
+
 @string{aps = {American Physical Society,}}
 
 @book{einstein1956investigations,
