--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,16 +1,71 @@
 ---
 ---
+@InProceedings{Berriaud2023StableDinnerParty,
+	title = {Stable Dinner Party Seating Arrangements},
+  author = {Berriaud, Damien and Constantinescu, Andrei and Wattenhofer, Roger},
+	booktitle = {Proceedings of the 19th Conference on Web and Internet Economics, Shanghai, China},
+	month = {December},
+	year=	{2023},
+  abbr={WINE 23},
+  bibtex_show={true},
+}
 
-@article{constantinescu_elkind_2021,
+@InProceedings{Constantinescu2023RecoveringSingleCrossing,
+	author = {Constantinescu, Andrei and Wattenhofer, Roger},
+	title = {Recovering Single-Crossing Preferences From Approval Ballots},
+	booktitle = {Proceedings of the 19th Conference on Web and Internet Economics, Shanghai, China},
+	month=	{December},
+	year=	{2023},
+  abbr={WINE 23},
+  bibtex_show={true},
+}
+
+@InProceedings{Constantinescu2023BestPolicy,
+  author = {Constantinescu, Andrei and Wattenhofer, Roger},
+  title = {Computing the Best Policy That Survives a Vote},
+  year = {2023},
+  isbn = {9781450394321},
+  publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
+  address = {Richland, SC},
+  booktitle = {Proceedings of the 22nd International Conference on Autonomous Agents and Multiagent Systems, London, United Kingdom},
+  pages = {2058--2066},
+  numpages = {9},
+  month = {6},
+  keywords = {probabilistic method, judgment aggregation, Anscombe's paradox, randomized algorithms, computational complexity, multiple referenda, approval ballots, computational social choice},
+  location = {London, United Kingdom},
+  series = {AAMAS'23},
+  abbr={AAMAS 23},
+  bibtex_show={true},
+}
+
+@InProceedings{Constantinescu2022TwoCrossing,
+  title     = {Voting in Two-Crossing Elections},
+  author    = {Constantinescu, Andrei and Wattenhofer, Roger},
+  booktitle = {Proceedings of the 31st International Joint Conference on
+               Artificial Intelligence, Vienna, Austria},
+  publisher = {International Joint Conferences on Artificial Intelligence Organization},
+  editor    = {Lud De Raedt},
+  pages     = {208--214},
+  year      = {2022},
+  month     = {7},
+  doi       = {10.24963/ijcai.2022/30},
+  url       = {https://doi.org/10.24963/ijcai.2022/30},
+  abbr      = {IJCAI 22},
+  bibtex_show={true},
+}
+
+@InProceedings{Constantinescu2021SingleCrossingCC,
   title={Proportional Representation under Single-Crossing Preferences Revisited},
   volume={35},
   url={https://ojs.aaai.org/index.php/AAAI/article/view/16667},
   number={6},
-  journal={Proceedings of the AAAI Conference on Artificial Intelligence},
-  author={Constantinescu, Andrei and Elkind, Edith}, year={2021},
+  booktitle={Proceedings of the 35th AAAI Conference on Artificial Intelligence, Virtual},
+  author={Constantinescu, Andrei and Elkind, Edith}, 
+  year={2021},
   month={May},
   pages={5286--5293},
-  abbr={AAAI'21}
+  abbr={AAAI 21},
+  bibtex_show={true},
 }
 
 @string{aps = {American Physical Society,}}
