Add arxiv links.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,6 +7,7 @@
 	month = {December},
 	year=	{2023},
   abbr={WINE 23},
+  arxiv={2305.09549},
   bibtex_show={true},
 }
 
@@ -17,6 +18,7 @@
 	month=	{December},
 	year=	{2023},
   abbr={WINE 23},
+  arxiv={2310.03736},
   bibtex_show={true},
 }
 
@@ -35,6 +37,7 @@
   location = {London, United Kingdom},
   series = {AAMAS'23},
   abbr={AAMAS 23},
+  arxiv={2303.00660},
   bibtex_show={true},
 }
 
@@ -51,6 +54,7 @@
   doi       = {10.24963/ijcai.2022/30},
   url       = {https://doi.org/10.24963/ijcai.2022/30},
   abbr      = {IJCAI 22},
+  arxiv     = {2205.00474},
   bibtex_show={true},
 }
 
@@ -65,6 +69,7 @@
   month={May},
   pages={5286--5293},
   abbr={AAAI 21},
+  arxiv={2010.08637},
   bibtex_show={true},
 }
 
