--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -38,6 +38,7 @@
   series = {AAMAS'23},
   abbr={AAMAS 23},
   arxiv={2303.00660},
+  html={https://dl.acm.org/doi/abs/10.5555/3545946.3598879},
   bibtex_show={true},
 }
 
@@ -53,6 +54,7 @@
   month     = {7},
   doi       = {10.24963/ijcai.2022/30},
   url       = {https://doi.org/10.24963/ijcai.2022/30},
+  html      = {https://doi.org/10.24963/ijcai.2022/30},
   abbr      = {IJCAI 22},
   arxiv     = {2205.00474},
   bibtex_show={true},
@@ -61,7 +63,6 @@
 @InProceedings{Constantinescu2021SingleCrossingCC,
   title={Proportional Representation under Single-Crossing Preferences Revisited},
   volume={35},
-  url={https://ojs.aaai.org/index.php/AAAI/article/view/16667},
   number={6},
   booktitle={Proceedings of the 35th AAAI Conference on Artificial Intelligence, Virtual},
   author={Constantinescu, Andrei and Elkind, Edith}, 
@@ -70,6 +71,12 @@
   pages={5286--5293},
   abbr={AAAI 21},
   arxiv={2010.08637},
+  url={https://ojs.aaai.org/index.php/AAAI/article/view/16667},
+  html={https://ojs.aaai.org/index.php/AAAI/article/view/16667},
+  abstract={We study the complexity of determining a winning committee under the Chamberlin--Courant voting rule when voters' preferences are single-crossing on a line, or, more generally, on a tree. For the  line, Skowron et al. (2015) describe an \(O(n^2mk)\) algorithm 
+(where \(n\), \(m\), \(k\) are the number of voters, the number of candidates and the committee size, respectively); we show that a simple tweak improves the time complexity to \(O(nmk)\). We then improve this bound for \(k=\Omega(\log n)\) by reducing our problem to the \(k\)-link path problem for DAGs with concave Monge weights, obtaining a
+\(nm2^{O\left(\sqrt{\log k\log\log n}\right)}\) algorithm for the general case and a nearly linear algorithm for the Borda misrepresentation function. For trees, we point out an issue with the algorithm proposed by Clearwater, Puppe, and Slinko (2015), 
+and develop a \(O(nmk)\) algorithm for this case as well.},
   bibtex_show={true},
 }
 
