--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,6 @@
 ---
 ---
-@misc{constantinescu2023convex,
+@Misc{constantinescu2023convex,
   author = {Constantinescu, Andrei and Ghinea, Diana and Wattenhofer, Roger and Westermann, Floris},
   title = {Meeting in a Convex World: Convex Consensus with Asynchronous Fallback},
   howpublished = {Cryptology ePrint Archive, Paper 2023/1364},
@@ -15,7 +15,7 @@ Afterwards, we consider achieving consensus using deterministic protocols, for w
   selected=true,
 }
 
-@misc{constantinescu2023fair,
+@Misc{constantinescu2023fair,
   title={A Fair and Resilient Decentralized Clock Network for Transaction Ordering}, 
   author={Constantinescu, Andrei and Ghinea, Diana and Heimbach, Lioba and Wang, Zilin and Wattenhofer, Roger},
   year={2023},
@@ -54,6 +54,7 @@ In this work, we present the Decentralized Clock Network, a new approach for ach
 	year=	{2023},
   abbr={WINE 23},
   arxiv={2310.03736},
+  code = {https://github.com/Andrei1998/rec-sc-from-approval},
   abstract={An electorate with fully-ranked innate preferences casts approval votes over a finite set of alternatives. As a result, only partial information about the true preferences is revealed to the voting authorities. In an effort to understand the nature of the true preferences given only partial information, one might ask whether the unknown innate preferences could possibly be single-crossing. The existence of a polynomial time algorithm to determine this has been asked as an outstanding problem in the works of Elkind and Lackner. We hereby give a polynomial time algorithm determining a single-crossing collection of fully-ranked preferences that could have induced the elicited approval ballots, or reporting the nonexistence thereof. Moreover, we consider the problem of identifying negative instances with a set of forbidden sub-ballots, showing that any such characterization requires infinitely many forbidden configurations.},
   bibtex_show={true},
 }
