--- a/_bibliography/students.bib
+++ b/_bibliography/students.bib
@@ -1,14 +1,87 @@
 ---
+group_by: year
 ---
-@InProceedings{Berriaud2023StableDinnerParty,
-	title = {Stable Dinner Party Seating Arrangements},
-  author = {Berriaud, Damien and Constantinescu, Andrei and Wattenhofer, Roger},
-	booktitle = {Proceedings of the 19th Conference on Web and Internet Economics, Shanghai, China},
-	month = {December},
-	year=	{2023},
-  abbr={WINE 23},
-  arxiv={2305.09549},
-  abstract={A group of \(n\) agents with numerical preferences for each other are to be assigned to the $n$ seats of a dining table. We study two natural topologies:~circular (cycle) tables and panel (path) tables. For a given seating arrangement, an agent's utility is the sum of their preference values towards their (at most two) direct neighbors. An arrangement is envy-free if no agent strictly prefers someone else's seat, and it is stable if no two agents strictly prefer each other's seats. Recently, it was shown that for both paths and cycles it is NP-hard to decide whether an envy-free arrangement exists, even for symmetric binary preferences. In contrast, we show that, if agents come from a bounded number of classes, the problem is solvable in polynomial time for arbitrarily-valued possibly asymmetric preferences, including outputting an arrangement if possible. We also give simpler proofs of the previous hardness results if preferences are allowed to be asymmetric. For stability, it is known that deciding the existence of stable arrangements is NP-hard for both topologies, but only if sufficiently-many numerical values are allowed. As it turns out, even constructing unstable instances can be challenging in certain cases, e.g., binary values. We propose a complete characterization of the existence of stable arrangements based on the number of distinct values in the preference matrix and the number of agent classes. We also ask the same question for non-negative values and give an almost-complete characterization, the most interesting outstanding case being that of paths with two-valued non-negative preferences, for which we experimentally find that stable arrangements always exist and prove it under the additional constraint that agents can only swap seats when sitting at most two positions away. Similarly to envy-freeness, we also give a polynomial-time algorithm for determining a stable arrangement assuming a bounded number of classes. We moreover consider the swap dynamics and exhibit instances where they do not converge, despite a stable arrangement existing.},
-  bibtex_show={true},
-  selected=true,
+@SemesterThesis{carmel,
+	title = {The Price of Majority Support},
+    author = {Baharav, Carmel},
+	month = {Fall},
+	year = {2023},
+    abbr={Semester},
+}
+
+@SemesterThesis{marc,
+	title = {Validity Conditions Under Asynchronicity},
+    author = {Dufay, Marc},
+	month = {Fall},
+	year = {2023},
+    note = {co-supervised with Diana Ghinea},
+    abbr={Semester},
+}
+
+@BachelorThesis{nicola,
+    title = {Comparison of Electoral Systems and Optimization of Voting Advice Questionnaires},
+    author = {Lo Russo, Nicola},
+	month = {Spring},
+	year = {2023},
+    note = {co-supervised with Judith Beestermöller},
+    abbr={Bachelor},
+}
+
+@SemesterThesis{floris,
+	title = {Abstract Approximate Agreement with Asynchronous Fallback},
+    author = {Westermann, Floris},
+	month = {Spring},
+	year = {2023},
+    note = {co-supervised with Diana Ghinea},
+    abbr={Semester},
+}
+
+@BachelorThesis{finn,
+    title = {Popularity for Approval Ballots},
+    author = {Harbeke, Finn},
+	month = {Spring},
+	year = {2023},
+    abbr={Bachelor},
+}
+
+@MasterThesis{zilin,
+	title = {Fair Transaction Ordering},
+    author = {Wang, Zilin},
+	month = {Fall},
+	year = {2022},
+    abbr={Master},
+}
+
+@SemesterThesis{boyan,
+	title = {Incentivizing Simple Transactions},
+    author = {Zhou, Boyan},
+	month = {Fall},
+	year = {2022},
+    note = {co-supervised with Lioba Heimbach},
+    abbr={Semester},
+}
+
+@MasterThesis{russli,
+	title = {Restricted Domains in Computational Social Choice},
+    author = {Rüssli, Felix},
+	month = {Fall},
+	year = {2022},
+    abbr={Master},
+}
+
+@SemesterThesis{berriaud,
+	title = {Stability in Seating Arrangements},
+    author = {Berriaud, Damien},
+	month = {Fall},
+	year = {2022},
+    abbr={Semester},
+}
+
+@SemesterThesis{sommer,
+	title = {Taking an Electoral Photograph with Neural Networks},
+    author = {Sommer, Pascal},
+	month = {Spring},
+	year = {2022},
+    note = {co-supervised with Peter Belcák},
+    abbr={Semester},
 }
