--- a/_bibliography/students.bib
+++ b/_bibliography/students.bib
@@ -48,6 +48,7 @@
     author = {Wang, Zilin},
 	month = {Fall},
 	year = {2022},
+    note = {co-supervised with Lioba Heimbach},
     abbr={Master},
 }
 
