--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,23 +15,20 @@ Afterwards, we consider achieving consensus using deterministic protocols, for w
   selected=true,
 }
 
-@Misc{constantinescu2023fair,
-  title={A Fair and Resilient Decentralized Clock Network for Transaction Ordering}, 
-  author={Constantinescu, Andrei and Ghinea, Diana and Heimbach, Lioba and Wang, Zilin and Wattenhofer, Roger},
-  year={2023},
-  eprint={2305.05206},
-  arxiv={2305.05206},
-  archivePrefix={arXiv},
-  abstract={Traditional blockchain design gives miners or validators full control over transaction ordering, i.e., they can freely choose which transactions to include or exclude, as well as in which order. While not an issue initially, the emergence of decentralized finance has introduced new transaction order dependencies allowing parties in control of the ordering to make a profit by front-running others' transactions.
-In this work, we present the Decentralized Clock Network, a new approach for achieving fair transaction ordering. Users submit their transactions to the network's clocks, which run an agreement protocol that provides each transaction with a timestamp of receipt which is then used to define the transactions' order. By separating agreement from ordering, our protocol is efficient and has a simpler design compared to other available solutions. Moreover, our protocol brings to the blockchain world the paradigm of asynchronous fallback, where the algorithm operates with stronger fairness guarantees during periods of synchronous use, switching to an asynchronous mode only during times of increased network delay.},
-  primaryClass={cs.DC},
-  abbr={arXiv},
-  bibtex_show={true},
-}
-
 %%%%%%%%%%%%%%%%%%%%
 % Conference Papers.
 %%%%%%%%%%%%%%%%%%%%
+
+@InProceedings{Constantinescu2023FairClocks,
+  title={A Fair and Resilient Decentralized Clock Network for Transaction Ordering}, 
+  author={Constantinescu, Andrei and Ghinea, Diana and Heimbach, Lioba and Wang, Zilin and Wattenhofer, Roger},
+  year={2023},
+  arxiv={2305.05206},
+  abstract={Traditional blockchain design gives miners or validators full control over transaction ordering, i.e., they can freely choose which transactions to include or exclude, as well as in which order. While not an issue initially, the emergence of decentralized finance has introduced new transaction order dependencies allowing parties in control of the ordering to make a profit by front-running others' transactions.
+In this work, we present the Decentralized Clock Network, a new approach for achieving fair transaction ordering. Users submit their transactions to the network's clocks, which run an agreement protocol that provides each transaction with a timestamp of receipt which is then used to define the transactions' order. By separating agreement from ordering, our protocol is efficient and has a simpler design compared to other available solutions. Moreover, our protocol brings to the blockchain world the paradigm of asynchronous fallback, where the algorithm operates with stronger fairness guarantees during periods of synchronous use, switching to an asynchronous mode only during times of increased network delay.},
+  abbr={OPODIS 23},
+  bibtex_show={true},
+}
 
 @InProceedings{Berriaud2023StableDinnerParty,
 	title = {Stable Dinner Party Seating Arrangements},
