--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -28,7 +28,7 @@ Afterwards, we consider achieving consensus using deterministic protocols, for w
 In this work, we present the Decentralized Clock Network, a new approach for achieving fair transaction ordering. Users submit their transactions to the network's clocks, which run an agreement protocol that provides each transaction with a timestamp of receipt which is then used to define the transactions' order. By separating agreement from ordering, our protocol is efficient and has a simpler design compared to other available solutions. Moreover, our protocol brings to the blockchain world the paradigm of asynchronous fallback, where the algorithm operates with stronger fairness guarantees during periods of synchronous use, switching to an asynchronous mode only during times of increased network delay.},
   abbr={OPODIS 23},
   month = {December},
-  booktitle = {27th International Conference on Principles of Distributed Systems, Tokyo, Japan},
+  booktitle = {Proceedings of the 27th International Conference on Principles of Distributed Systems, Tokyo, Japan},
   bibtex_show={true},
 }
 
