Add Hiking paper.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,19 @@
 ---
 ---
-@Misc{constantinescu2023convex,
+@Misc{Constantinescu2023Hiking,
+  title={Solving Woeginger's Hiking Problem: Wonderful Partitions in Anonymous Hedonic Games}, 
+  author={Constantinescu, Andrei and Lenzner, Pascal and Reiffenhäuser, Rebecca and Schmand, Daniel and Varricchio, Giovanna},
+  year={2023},
+  month={nov},
+  eprint={2311.02067},
+  archivePrefix={arXiv},
+  primaryClass={cs.GT},
+  bibtex_show={true},
+  arxiv = {2311.02067},
+  abbr={arXiv}
+}
+
+@Misc{Constantinescu2023Convex,
   author = {Constantinescu, Andrei and Ghinea, Diana and Wattenhofer, Roger and Westermann, Floris},
   title = {Meeting in a Convex World: Convex Consensus with Asynchronous Fallback},
   howpublished = {Cryptology ePrint Archive, Paper 2023/1364},
