Add student thesis

--- a/_bibliography/students.bib
+++ b/_bibliography/students.bib
@@ -1,5 +1,13 @@
 ---
 ---
+@MasterThesis{andrzej,
+	title = {Fairness and Proportionality in Allocation of Indivisible Goods},
+    author = {Turko, Andrzej},
+	month = {Spring},
+	year = {2024},
+    abbr={Master},
+}
+
 @SemesterThesis{carmel,
 	title = {The Price of Majority Support},
     author = {Baharav, Carmel},
