--- a/_bibliography/students.bib
+++ b/_bibliography/students.bib
@@ -1,5 +1,48 @@
 ---
 ---
+@MasterThesis{marc_two,
+	title = {Distributed Stable Matchings},
+    author = {Dufay, Marc},
+	month = {Spring},
+	year = {2024},
+    note = {co-supervised with Diana Ghinea},
+	abbr={Master},
+}
+
+@MasterThesis{dominic,
+	title = {Graph Algorithms for Dynamic Directories},
+    author = {Oertle, Dominic},
+	month = {Spring},
+	year = {2024},
+    note = {co-supervised with Pankaj Khanchandani},
+	abbr={Master},
+}
+
+@BachelorThesis{bahar,
+	title = {Incentivizing Simple Transactions},
+    author = {Acilan, Bahar},
+	month = {Spring},
+	year = {2024},
+    note = {co-supervised with Lioba Heimbach},
+    abbr={Bachelor},
+}
+
+@SemesterThesis{mihail,
+	title = {Game Theory for Games: Algorithms and Axioms},
+    author = {Lavric, Mihail},
+	month = {Spring},
+	year = {2024},
+    abbr={Semester},
+}
+
+@SemesterThesis{stefan,
+	title = {The Emergence of Two-Party Systems},
+    author = {Malanik, Stefan},
+	month = {Spring},
+	year = {2024},
+    abbr={Semester},
+}
+
 @MasterThesis{andrzej,
 	title = {Fairness and Proportionality in Allocation of Indivisible Goods},
     author = {Turko, Andrzej},
@@ -9,7 +52,7 @@
 }
 
 @SemesterThesis{carmel,
-	title = {The Price of Majority Support},
+	title = {The Price of Weighted Majority Support},
     author = {Baharav, Carmel},
 	month = {Fall},
 	year = {2023},
@@ -17,7 +60,7 @@
 }
 
 @SemesterThesis{marc,
-	title = {Validity Conditions Under Asynchronicity},
+	title = {Validity Properties of Byzantine Agreement},
     author = {Dufay, Marc},
 	month = {Fall},
 	year = {2023},
