Change hiking paper to proceedings version.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,19 +1,5 @@
 ---
 ---
-@Misc{Constantinescu2023Hiking,
-  title={Solving Woeginger's Hiking Problem: Wonderful Partitions in Anonymous Hedonic Games}, 
-  author={Constantinescu, Andrei and Lenzner, Pascal and Reiffenhäuser, Rebecca and Schmand, Daniel and Varricchio, Giovanna},
-  year={2023},
-  month={nov},
-  eprint={2311.02067},
-  archivePrefix={arXiv},
-  primaryClass={cs.GT},
-  bibtex_show={true},
-  arxiv = {2311.02067},
-  abbr={arXiv},
-  abstract={A decade ago, Gerhard Woeginger posed an open problem that became well-known as "Gerhard's Hiking Problem": Consider a group of $n$ people that want to go hiking; everyone expresses preferences over the size of their hiking group in the form of an interval between 1 and $n$. Is it possible to efficiently assign the $n$ people to a set of hiking subgroups so that every person approves the size of their assigned subgroup? The problem is also known as efficiently deciding if an instance of an anonymous Hedonic Game with interval approval preferences admits a wonderful partition. We resolve the open problem in the affirmative by presenting an $O(n^5)$ time algorithm for Gerhard's Hiking Problem. Our solution is based on employing a dynamic programming approach for a specific rectangle stabbing problem from computational geometry. Moreover, we propose natural more demanding extensions of the problem, e.g., maximizing the number of satisfied people, and show that they are also efficiently solvable. Additionally, we precisely map the boundary of tractability for the wonderful partition problem by proving that finding such a partition becomes NP-hard if non-interval approval size sets of size two are allowed. This closes a gap in the complexity landscape, since hardness was only known for the case with non-interval approval size sets of size at most 3. Last but not least, we employ our solution to efficiently compute a partition that maximizes the egalitarian welfare for anonymous single-peaked Hedonic Games.},
-}
-
 @Misc{Constantinescu2023Convex,
   author = {Constantinescu, Andrei and Ghinea, Diana and Wattenhofer, Roger and Westermann, Floris},
   title = {Meeting in a Convex World: Convex Consensus with Asynchronous Fallback},
@@ -32,6 +18,18 @@ Afterwards, we consider achieving consensus using deterministic protocols, for w
 %%%%%%%%%%%%%%%%%%%%
 % Conference Papers.
 %%%%%%%%%%%%%%%%%%%%
+
+@InProceedings{Constantinescu2023Hiking,
+  title={Solving Woeginger's Hiking Problem: Wonderful Partitions in Anonymous Hedonic Games}, 
+  author={Constantinescu, Andrei and Lenzner, Pascal and Reiffenhäuser, Rebecca and Schmand, Daniel and Varricchio, Giovanna},
+  year={2024},
+  month={July},
+  booktitle={Proceedings of the 51st International Colloquium on Automata, Languages and Programming, Tallinn, Estonia},
+  bibtex_show={true},
+  arxiv = {2311.02067},
+  abbr={ICALP 24},
+  abstract={A decade ago, Gerhard Woeginger posed an open problem that became well-known as ``Woeginger's Hiking Problem'': Consider a group of $n$ people that want to go hiking; everyone expresses preferences over the size of their hiking group in the form of an interval between $1$ and $n$. Is it possible to efficiently assign the $n$ people to a set of hiking subgroups so that every person approves the size of their assigned subgroup? The problem is also known as efficiently deciding if an instance of an anonymous Hedonic Game with interval approval preferences admits a wonderful partition. We resolve the open problem in the affirmative by presenting an $O(n^5)$ time algorithm for Woeginger's Hiking Problem. Our solution is based on employing a dynamic programming approach for a specific rectangle stabbing problem from computational geo\-metry. Moreover, we propose natural, more demanding extensions of the problem, e.g., maximizing the number of satisfied participants and variants with single-peaked preferences, and show that they are also efficiently solvable. Last but not least, we employ our solution to efficiently compute a partition that maximizes the egalitarian welfare for anonymous single-peaked Hedonic Games.},
+}
 
 @InProceedings{Tyrovolas2023Unravelling,
   title={Unravelling Expressive Delegations: Complexity and Normative Analysis}, 
