--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,19 @@
 ---
 ---
+@Misc{Constantinescu2024Clocks,
+  author = {Constantinescu, Andrei and Ghinea, Diana and Sliwinski, Jakub and Wattenhofer, Roger},
+  title = {Unifying Partial Synchrony},
+  year = {2023},
+  url = {https://arxiv.org/abs/2405.10249},
+  abstract={The distributed computing literature considers multiple options for modeling communication. Most simply, communication is categorized as either synchronous or asynchronous. Synchronous communication assumes that messages get delivered within a publicly known timeframe and that parties' clocks are synchronized. Asynchronous communication, on the other hand, only assumes that messages get delivered eventually. A more nuanced approach, or a middle ground between the two extremes, is given by the partially synchronous model, which is arguably the most realistic option. This model comes in two commonly considered flavors:
+(i) The Global Stabilization Time (GST) model: after an (unknown) amount of time, the network becomes synchronous. This captures scenarios where network issues are transient.
+(ii) The Unknown Latency (UL) model: the network is, in fact, synchronous, but the message delay bound is unknown.
+This work formally establishes that any time-agnostic property that can be achieved by a protocol in the UL model can also be achieved by a (possibly different) protocol in the GST model. By time-agnostic, we mean properties that can depend on the order in which events happen but not on time as measured by the parties. Most properties considered in distributed computing are time-agnostic. The converse was already known, even without the time-agnostic requirement, so our result shows that the two network conditions are, under one sensible assumption, equally demanding.},
+  arxiv = {2405.10249},
+  abbr={arXiv},
+  bibtex_show={true},
+}
+
 @Misc{Constantinescu2023Convex,
   author = {Constantinescu, Andrei and Ghinea, Diana and Wattenhofer, Roger and Westermann, Floris},
   title = {Meeting in a Convex World: Convex Consensus with Asynchronous Fallback},
