--- a/_bibliography/students.bib
+++ b/_bibliography/students.bib
@@ -1,7 +1,42 @@
 ---
 ---
+@BachelorThesis{ramon,
+	title = {Voting for Coalitions},
+    author = {Wick, Ramon},
+	month = {Fall},
+	year = {2024},
+    abbr={Bachelor},
+}
+
+@BachelorThesis{murezi,
+	title = {Morality in Sequential Games},
+    author = {Giger, Murezi},
+	month = {Fall},
+	year = {2024},
+    note = {co-supervised with Damien Berriaud},
+    abbr={Bachelor},
+}
+
+@MasterThesis{jari,
+	title = {Kantian Moralists and Altruists},
+    author = {Ettlin, Jari},
+	month = {Fall},
+	year = {2024},
+    note = {co-supervised with Damien Berriaud},
+    abbr={Master},
+}
+
+@InternshipThesis{antoine,
+	title = {Homo-Moralis and the Morality of Continuous Symmetric Games},
+    author = {Delacour, Antoine},
+	month = {Fall},
+	year = {2024},
+    note = {co-supervised with Damien Berriaud},
+    abbr={Intern},
+}
+
 @MasterThesis{marc_two,
-	title = {Distributed Stable Matchings},
+	title = {Byzantine Distributed Stable Matching},
     author = {Dufay, Marc},
 	month = {Spring},
 	year = {2024},
