Add 3 more preprints.

--- a/_bibliography/students.bib
+++ b/_bibliography/students.bib
@@ -32,7 +32,7 @@
 	month = {Fall},
 	year = {2024},
     note = {co-supervised with Damien Berriaud},
-    abbr={Intern},
+    abbr={Internship},
 }
 
 @MasterThesis{marc_two,
