--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,30 @@
 %%%%%%%%%%%%%%%%%%%%
 %%%% Preprints. %%%%
 %%%%%%%%%%%%%%%%%%%%
+@misc{Constantinescu2024ByzantineBoxes,
+    author = {Constantinescu, Andrei and Wattenhofer, Roger},
+    title = {Byzantine Game Theory: Sun Tzu's Boxes},
+    year = 2024,
+    abbr={In Submission},
+    bibtex_show={true},
+}
+
+@article{Constantinescu2024RoadPricing,
+    author = {Constantinescu, Andrei and Turko, Andrzej and Wattenhofer, Roger},
+    title = {Logarithmic Approximation for Road Pricing on Grids},
+    year = 2024,
+    abbr={In Submission},
+    bibtex_show={true},
+}
+
+@article{Baharav2024CondorcetWeightedAnscombe,
+    author = {Baharav, Carmel and Constantinescu, Andrei and Wattenhofer, Roger},
+    title = {Condorcet Winners and Anscombe's Paradox Under Weighted Binary Voting},
+    year = 2024,
+    abbr={In Submission},
+    bibtex_show={true},
+}
+
 @misc{Constantinescu2024Validity,
     title={Validity in Network-Agnostic Byzantine Agreement}, 
     author={Constantinescu, Andrei and Dufay, Marc and Ghinea, Diana  and Wattenhofer, Roger},
