--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,7 @@
     bibtex_show={true},
 }
 
-@article{Constantinescu2024RoadPricing,
+@misc{Constantinescu2024RoadPricing,
     author = {Constantinescu, Andrei and Turko, Andrzej and Wattenhofer, Roger},
     title = {Logarithmic Approximation for Road Pricing on Grids},
     year = 2024,
@@ -20,7 +20,7 @@
     bibtex_show={true},
 }
 
-@article{Baharav2024CondorcetWeightedAnscombe,
+@misc{Baharav2024CondorcetWeightedAnscombe,
     author = {Baharav, Carmel and Constantinescu, Andrei and Wattenhofer, Roger},
     title = {Condorcet Winners and Anscombe's Paradox Under Weighted Binary Voting},
     year = 2024,
