Update Andrzej's project name.

--- a/_bibliography/students.bib
+++ b/_bibliography/students.bib
@@ -79,7 +79,7 @@
 }
 
 @MasterThesis{andrzej,
-	title = {Fairness and Proportionality in Allocation of Indivisible Goods},
+	title = {Logarithmic Approximation for Road Pricing on Grids},
     author = {Turko, Andrzej},
 	month = {Spring},
 	year = {2024},
