Add AAMAS'25 accepted papers.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,25 +4,9 @@
 %%%%%%%%%%%%%%%%%%%%
 %%%% Preprints. %%%%
 %%%%%%%%%%%%%%%%%%%%
-@misc{Constantinescu2024ByzantineBoxes,
-    author = {Constantinescu, Andrei and Wattenhofer, Roger},
-    title = {Byzantine Game Theory: Sun Tzu's Boxes},
-    year = 2024,
-    abbr={In Submission},
-    bibtex_show={true},
-}
-
 @misc{Constantinescu2024RoadPricing,
     author = {Constantinescu, Andrei and Turko, Andrzej and Wattenhofer, Roger},
     title = {Logarithmic Approximation for Road Pricing on Grids},
-    year = 2024,
-    abbr={In Submission},
-    bibtex_show={true},
-}
-
-@misc{Baharav2024CondorcetWeightedAnscombe,
-    author = {Baharav, Carmel and Constantinescu, Andrei and Wattenhofer, Roger},
-    title = {Condorcet Winners and Anscombe's Paradox Under Weighted Binary Voting},
     year = 2024,
     abbr={In Submission},
     bibtex_show={true},
@@ -42,6 +26,28 @@ We show that for any non-trivial validity property the condition \(2 \cdot t_s +
 %%%%%%%%%%%%%%%%%%%%
 % Conference Papers.
 %%%%%%%%%%%%%%%%%%%%
+@InProceedings{Constantinescu2024ByzantineBoxes,
+    author = {Constantinescu, Andrei and Wattenhofer, Roger},
+    title = {Byzantine Game Theory: Sun Tzu's Boxes},
+    year = {2025},
+    booktitle = {Proceedings of the 24th International Conference on Autonomous Agents and Multiagent Systems, Detroit, Michigan, USA},
+    month = may,
+    series = {AAMAS'25},
+    abbr={AAMAS 25},
+    bibtex_show={true},
+}
+
+@InProceedings{Baharav2024CondorcetWeightedAnscombe,
+    author = {Baharav, Carmel and Constantinescu, Andrei and Wattenhofer, Roger},
+    title = {Condorcet Winners and Anscombe's Paradox Under Weighted Binary Voting},
+    year = {2025},
+    booktitle = {Proceedings of the 24th International Conference on Autonomous Agents and Multiagent Systems, Detroit, Michigan, USA},
+    month = may,
+    series = {AAMAS'25},
+    abbr={AAMAS 25},
+    bibtex_show={true},
+}
+
 @InProceedings{Constantinescu2024Convex,
   author = {Constantinescu, Andrei and Ghinea, Diana and Wattenhofer, Roger and Westermann, Floris},
   title = {Convex Consensus with Asynchronous Fallback},
