Add convex consensus slides.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -60,6 +60,7 @@ We show that for any non-trivial validity property the condition \(2 \cdot t_s +
 In the process, we introduce communication primitives tailored to the best-of-both-worlds model, which we believe to be of independent interest. These are a deterministic primitive, which allows honest parties to obtain intersecting views, and a randomized primitive, leading to identical views (which is impossible to achieve deterministically).
 Afterwards, we consider achieving consensus using deterministic protocols, for which the agreement condition must be appropriately relaxed depending on the convexity space. For the relevant case of graph convexity spaces, we find that a previous asynchronous approximate agreement protocol for chordal graphs is incorrect, and hereby give a new protocol for the problem designed for the best-of-both-worlds model and achieving tight point-wise resilience bounds. Finally, we show that asynchronous graph approximate agreement remains unsolvable by deterministic protocols even when corruptions are restricted to at most two crashing nodes and the distance agreement threshold is linear in the size of the graph.},
   eprint_to_show={2023/1364},
+  slides={convex_with_async_fallback_disc_slides.pptx},
   bibtex_show={true},
 }
 
