Add Kobi's clocks' slides.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -77,6 +77,7 @@ Afterwards, we consider achieving consensus using deterministic protocols, for w
 (ii) The Unknown Latency (UL) model: the network is, in fact, synchronous, but the message delay bound is unknown.
 This work formally establishes that any time-agnostic property that can be achieved by a protocol in the UL model can also be achieved by a (possibly different) protocol in the GST model. By time-agnostic, we mean properties that can depend on the order in which events happen but not on time as measured by the parties. Most properties considered in distributed computing are time-agnostic. The converse was already known, even without the time-agnostic requirement, so our result shows that the two network conditions are, under one sensible assumption, equally demanding.},
   arxiv = {2405.10249},
+  slides={unifying_partial_sync_slides.pptx},
   bibtex_show={true},
 }
 
