Add video for Kobi's clocks.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -64,7 +64,7 @@ Afterwards, we consider achieving consensus using deterministic protocols, for w
   bibtex_show={true},
 }
 
-@InProceedings{Constantinescu2024Clocks,
+@InProceedings{Constantinescu2024KobisClocks,
   author = {Constantinescu, Andrei and Ghinea, Diana and Sliwinski, Jakub and Wattenhofer, Roger},
   title = {Brief Announcement: Unifying Partial Synchrony},
   booktitle = {Proceedings of the 38th International Symposium on Distributed Computing, Madrid, Spain},
@@ -78,6 +78,7 @@ Afterwards, we consider achieving consensus using deterministic protocols, for w
 This work formally establishes that any time-agnostic property that can be achieved by a protocol in the UL model can also be achieved by a (possibly different) protocol in the GST model. By time-agnostic, we mean properties that can depend on the order in which events happen but not on time as measured by the parties. Most properties considered in distributed computing are time-agnostic. The converse was already known, even without the time-agnostic requirement, so our result shows that the two network conditions are, under one sensible assumption, equally demanding.},
   arxiv = {2405.10249},
   slides={unifying_partial_sync_slides.pptx},
+  video={https://www.youtube.com/live/pliBpRrth-0?si=xvV_OiQaSvm24sb-&t=27904},
   bibtex_show={true},
 }
 
