--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -61,6 +61,7 @@ In the process, we introduce communication primitives tailored to the best-of-bo
 Afterwards, we consider achieving consensus using deterministic protocols, for which the agreement condition must be appropriately relaxed depending on the convexity space. For the relevant case of graph convexity spaces, we find that a previous asynchronous approximate agreement protocol for chordal graphs is incorrect, and hereby give a new protocol for the problem designed for the best-of-both-worlds model and achieving tight point-wise resilience bounds. Finally, we show that asynchronous graph approximate agreement remains unsolvable by deterministic protocols even when corruptions are restricted to at most two crashing nodes and the distance agreement threshold is linear in the size of the graph.},
   eprint_to_show={2023/1364},
   slides={convex_with_async_fallback_disc_slides.pdf},
+  video={https://www.youtube.com/live/pliBpRrth-0?t=28277s},
   bibtex_show={true},
 }
 
